# docs-to-markdown

./: .auto-claude-security.json  .auto-claude-status  .gitignore  README.md  pyproject.toml  requirements.txt  run.bat  run.ps1  setup.bat  setup.ps1
.auto-claude/specs/002-create-venv-and-a-1-click-setup-and-launcher-for-t/: build-progress.txt  complexity_assessment.json  context.json  implementation_plan.json  init.sh  project_index.json  requirements.json  review_state.json  spec.md  task_logs.json  task_metadata.json
.auto-claude/specs/002-create-venv-and-a-1-click-setup-and-launcher-for-t/memory/: attempt_history.json  build_commits.json
.auto-claude/specs/002-create-venv-and-a-1-click-setup-and-launcher-for-t/memory/session_insights/: session_001.json  session_002.json  session_003.json
docs_to_markdown/: __init__.py  __main__.py  converter.py  gui.py
docs_to_markdown.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
test_manual/existing_output/: already_converted.md
test_manual/folder_mixed/: invalid.txt
tests/: test_discovery.py  test_gui.py
