[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "docs-to-markdown"
version = "0.1.0"
description = "Batch convert .doc/.docx files to Markdown"
requires-python = ">=3.9"
readme = "README.md"
dependencies = [
	"mammoth==1.10.0",
	"markdownify==0.14.1",
	"beautifulsoup4==4.12.3",
	"lxml==5.3.0",
]

[project.scripts]
docs-to-markdown = "docs_to_markdown.__main__:main"
docs-to-markdown-gui = "docs_to_markdown.gui:main"

[tool.setuptools]
packages.find.where = ["."]
packages.find.include = ["docs_to_markdown*"]
packages.find.exclude = ["test_manual*", "tests*", ".worktrees*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
